# phobos_simulation

./: README.md  make.sh  push.sh
phobos_gps_sim/: CMakeLists.txt  package.xml
phobos_imu_sim/: CMakeLists.txt  package.xml
phobos_imu_sim/cfg/: DRNoiseGen.cfg
phobos_imu_sim/src/imu_sim_node/: DRNoiseGen.hpp  GzIMU.hpp
phobos_manip_control/: CMakeLists.txt  package.xml
phobos_simulation/: CMakeLists.txt  package.xml
phobos_simulation/cfg/: ArmJointDRC.cfg  ControllerServer.cfg  ImuNoiseGen.cfg
phobos_simulation/launch/: camera_stream.launch  dynamometers.launch  gui_controller.launch  keyboard_controller.launch  minimanipulator_controller.launch  pid_server.launch  pid_wheel_server.launch  rviz.launch  sim.launch  spawn_home.launch  spawn_rover.launch  stone1.launch  viso2.launch
phobos_simulation/launch/kongres/: kongres_control_basic.launch  kongres_rover_spawn.launch  kongres_stones_spawn.launch
phobos_simulation/src/nodes/controller_server/: ControllerServer.cpp  ControllerServer.hpp
phobos_simulation/src/nodes/gazebo_arm_controller/include/: ArmJointDRC.hpp  ControllerPID.hpp
phobos_simulation/src/nodes/gazebo_arm_controller/src/: ArmJointsController.cpp  Main.cpp
phobos_simulation/src/nodes/gazebo_imu_handler/: DRNoiseGen.hpp  GzIMU.hpp  GzLinkState.hpp  GzTF.hpp  Main.cpp  PubAccMagnitude.hpp  PubVertDevMagnitude.hpp
phobos_simulation/src/nodes/gazebo_joint_dynamometer_recorder/src/: Main.cpp
phobos_simulation/src/nodes/gazebo_joint_publisher/: JointStatesPublisher.hpp  Main.cpp
phobos_simulation/src/nodes/gazebo_motor_transceiver/: Main.cpp  PubCtrl.hpp  PubEncoder.hpp  SubEncoder.hpp  SubVel.hpp
phobos_simulation/src/nodes/gazebo_spi_motor_transmiter/: Main.cpp  PubCtrl.hpp
phobos_simulation/src/nodes/gazebo_uart433_controler/: PubGazeboJointVel.hpp  SubArmVel.hpp  SubWheelVel.hpp
phobos_simulation/src/nodes/gazebo_wheel_controller/src/: Main.cpp
phobos_simulation/src/nodes/keyboard_teleop/include/: KeyDefinitions.hpp  KeyListener.hpp  PublisherTwist.hpp
phobos_simulation/src/nodes/keyboard_teleop/src/: KeyListener.cpp  Main.cpp  PublisherTwist.cpp
phobos_simulation/src/nodes/uart_433_simulation_bridge/: Main.cpp
phobos_simulation/src/plugins/controller_pid/: ControllerPID.hh  ControllerPlugin.cc  README
phobos_simulation/src/plugins/differential_pid/: ControllerPID.hh  DifferentialPID.cc  README
phobos_simulation/src/plugins/joint_dynamometer/: JointDynamometer.cc  JointDynamometer.hh
phobos_simulation/src/plugins/joint_encoder/: JointEncoder.cc  JointEncoder.hh
phobos_simulation/src/plugins/joint_limiter/: JointLimiter.cc  JointLimiter.hh
phobos_simulation/xacro/: rover.urdf  rover.xacro
phobos_simulation/xacro/arm/: __arm.xacro  finger.xacro  finger.xacro.old  finger_b.xacro  link0.xacro  link1.xacro  link2.xacro  link3.xacro  link4.xacro  link_0.xacro  link_1.xacro  link_2.xacro  link_3.xacro  link_4.xacro  link_4_finger.xacro
phobos_simulation/xacro/arm/old/: finger_b.xacro.old2
phobos_simulation/xacro/base/: __base.xacro  main_body.xacro  tower_pitch.xacro  tower_yaw.xacro
phobos_simulation/xacro/rocker-bogie/: suspension_beam.xacro  wheel.xacro
phobos_simulation/xacro/rocker-bogie/.diff/: diff_link1.xacro  diff_link2.xacro  differential.xacro
phobos_simulation/xacro/rocker-bogie/bogie/: __bogie.xacro  bogie_bearing.xacro  bogie_link1.xacro  bogie_link2.xacro  bogie_link_1.xacro  bogie_link_2.xacro
phobos_simulation/xacro/rocker-bogie/rocker/: __rocker.xacro  rocker_bearing.xacro  rocker_link1.xacro  rocker_link3.xacro  rocker_link_1.xacro  rocker_link_2.xacro  rocker_link_3.xacro  rocker_link_diff.xacro
phobos_simulation/xacro/sensors/: camera.xacro
rover_gps_sim/: CMakeLists.txt  package.xml
rover_gps_sim/cfg/: DRNoiseGen.cfg
rover_gps_sim/src/gps_sim_node/: GzTF.hpp  Main.cpp
rover_imu/: CMakeLists.txt  package.xml
rover_imu/cfg/: DRNoiseGen.cfg
rover_imu/src/imu_node/: DRNoiseGen.hpp  Main.cpp
rover_simulation/: CMakeLists.txt  package.xml
rover_simulation/cfg/: ControllerServer.cfg
rover_simulation/launch/: dynamometers.launch  keyboard_controller.launch  turtle_teleop_remapped.launch
rover_simulation/launch/kongres/: kongres_control_basic.launch  kongres_control_keyboard.launch  kongres_control_manipulator.launch
rover_simulation/src/nodes/controller_server/: ControllerServer.hpp  ControllerServerMain.cpp
rover_simulation/src/nodes/gazebo_arm_controller/include/: ArmJointsController.hpp
rover_simulation/src/nodes/gazebo_joint_dynamometer_recorder/include/: GazeboJointDynamometerRecorder.hpp
rover_simulation/src/nodes/gazebo_joint_dynamometer_recorder/src/: Main.cpp
rover_simulation/src/nodes/gazebo_joint_publisher/: AddJoint.hpp  GzJointState.hpp  Main.cpp
rover_simulation/src/nodes/gazebo_uart433_controler/: Main.cpp  PubGazeboJointVel.hpp  SubWheelVel.hpp
rover_simulation/src/nodes/gazebo_wheel_controller/include/: BaseWheelController.hpp
rover_simulation/src/nodes/gazebo_wheel_controller/src/: BaseWheelController.cpp
rover_simulation/src/plugins/controller_pid/: ControllerPlugin.cc  ControllerPlugin.hh
rover_simulation/src/plugins/differential_pid/: DifferentialPID.hh
rover_simulation/src/plugins/joint_dynamometer/: JointDynamometer.cc  JointDynamometer.hh
rover_simulation/xacro/: rover.xacro
rover_simulation/xacro/arm/: __arm.xacro  finger.xacro  finger.xacro.old  link1.xacro  link2.xacro  link3.xacro  link4.xacro
rover_simulation/xacro/base/: __base.xacro  main_body.xacro  tower_pitch.xacro  tower_yaw.xacro
rover_simulation/xacro/rocker-bogie/: __rocker-bogie.xacro  suspension_beam.xacro  wheel.xacro
rover_simulation/xacro/rocker-bogie/.diff/: diff_bearing.xacro  diff_link1.xacro  diff_link2.xacro
rover_simulation/xacro/rocker-bogie/bogie/: __bogie.xacro  bogie_bearing.xacro  bogie_link1.xacro  bogie_link2.xacro
rover_simulation/xacro/rocker-bogie/rocker/: __rocker.xacro  rocker_bearing.xacro  rocker_link1.xacro  rocker_link2.xacro  rocker_link3.xacro  rocker_link_diff.xacro
rover_simulation/xacro/sensors/: camera.xacro
(+86 files in other folders)
